1. update slogan 2. update tag position 3. fix tag wrap bug

--- a/src/components/styles/tag.styl
+++ b/src/components/styles/tag.styl
@@ -11,6 +11,7 @@
   }
   .tag-icon--container {
     position: relative;
+    white-space: nowrap;
     &:before {
       background-repeat: no-repeat;
       background-size: 12px 26px;
