--- a/src/pages/styles/pic-share.styl
+++ b/src/pages/styles/pic-share.styl
@@ -34,6 +34,7 @@
 
 .pic-share__pic {
   position: relative;
+  overflow-x: hidden;
   img {
     width: 100%;
   }
